# netz

./: Cargo.toml  README.md
netz/: Cargo.toml
netz-core/: Cargo.toml
netz-core/src/: lib.rs
netz-core/src/codec/: message_pack.rs  mod.rs
netz-core/src/framed/: io_serde.rs  length_delimited.rs  mod.rs
netz-core/src/traits/: network.rs
netz-core/src/utils/: background_task.rs  mod.rs
netz-quic/: Cargo.toml
netz-quic/src/: conn.rs  lib.rs
netz/src/: lib.rs
