[workspace]
resolver = "2"
members = ["netz", "netz-core", "netz-quic"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Ethereal <zsl99a@live.com>"]

[workspace.dependencies]
netz = { path = "netz" }
netz-core = { path = "netz-core" }
netz-quic = { path = "netz-quic" }

anyhow = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

pin-project-lite = "0.2"

futures = { version = "0.3", features = ["thread-pool"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-serde = { version = "0.9", features = ["messagepack"] }

serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
bytes = "1"
rmp-serde = "1"
