[package]
name = "netz"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
netz-core.workspace = true
netz-quic.workspace = true

anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

futures.workspace = true
tokio.workspace = true

serde.workspace = true
chrono.workspace = true
uuid.workspace = true
rmp-serde.workspace = true
